force-app/main/default/objects/Postes_Suppl_mentaires__c/Postes_Suppl_mentaires__c.object-meta.xml
<CustomObject>
    <label>Historique poste et poste supplémentaire</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Nom de Postes Supplémentaires</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historique poste et poste supplémentaire</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>