force-app/main/default/objects/Postes_Suppl_mentaires__c/fields/Compte__c.field-meta.xml
<CustomField>
    <fullName>Compte__c</fullName>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Postes_Suppl_mentaires</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>