force-app/main/default/objects/Postes_Suppl_mentaires__c/fields/Date_de_fin_du_poste__c.field-meta.xml
<CustomField>
    <fullName>Date_de_fin_du_poste__c</fullName>
    <label>Date de fin du poste</label>
    <type>Date</type>
</CustomField>