force-app/main/default/objects/Postes_Suppl_mentaires__c/fields/Email_direct__c.field-meta.xml
<CustomField>
    <fullName>Email_direct__c</fullName>
    <label>Email direct</label>
    <type>Email</type>
</CustomField>