force-app/main/default/objects/Postes_Suppl_mentaires__c/fields/Email_Professionnel__c.field-meta.xml
<CustomField>
    <fullName>Email_Professionnel__c</fullName>
    <label>Email Professionnel</label>
    <type>Email</type>
</CustomField>