force-app/main/default/objects/Postes_Suppl_mentaires__c/fields/Fax_direct__c.field-meta.xml
<CustomField>
    <fullName>Fax_direct__c</fullName>
    <label>Fax direct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>