force-app/main/default/objects/Postes_Suppl_mentaires__c/fields/Fonction__c.field-meta.xml
<CustomField>
    <fullName>Fonction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fonction</label>
    <referenceTo>Fonction__c</referenceTo>
    <relationshipName>Fonction</relationshipName>
    <type>Lookup</type>
</CustomField>