force-app/main/default/objects/Postes_Suppl_mentaires__c/fields/Fonction_exacte__c.field-meta.xml
<CustomField>
    <fullName>Fonction_exacte__c</fullName>
    <label>Fonction exacte</label>
    <length>254</length>
    <type>Text</type>
</CustomField>