force-app/main/default/objects/Postes_Suppl_mentaires__c/fields/Fonctions__c.field-meta.xml
<CustomField>
    <fullName>Fonctions__c</fullName>
    <label>Fonction codée</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Famille_Fonction__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Non Renseignée</fullName>
            </value>
            <value>
                <fullName>Prof Libérales &amp; Act.Diverses</fullName>
            </value>
            <value>
                <fullName>En Cours de Création d&apos;Entreprise</fullName>
            </value>
            <value>
                <fullName>Volontariat International en Entreprise</fullName>
            </value>
            <value>
                <fullName>En Cours de Formation Compl.</fullName>
            </value>
            <value>
                <fullName>Retraité(e)</fullName>
            </value>
            <value>
                <fullName>Congé Parental d&apos;Education</fullName>
            </value>
            <value>
                <fullName>Militaire</fullName>
            </value>
            <value>
                <fullName>Profession Artistique</fullName>
            </value>
            <value>
                <fullName>Prof Médicale/Pharmacie/Vétér.</fullName>
            </value>
            <value>
                <fullName>Religieux</fullName>
            </value>
            <value>
                <fullName>Ministre/Député/Haut Fonction.</fullName>
            </value>
            <value>
                <fullName>Elus</fullName>
            </value>
            <value>
                <fullName>Cadre des Services Publics</fullName>
            </value>
            <value>
                <fullName>Exploitant Agricole</fullName>
            </value>
            <value>
                <fullName>Journaliste</fullName>
            </value>
            <value>
                <fullName>Contrôleur/Inspecteur Impôts</fullName>
            </value>
            <value>
                <fullName>Syndic d&apos;Immeubles</fullName>
            </value>
            <value>
                <fullName>Hôtelier/Restaurateur</fullName>
            </value>
            <value>
                <fullName>Commerçant</fullName>
            </value>
            <value>
                <fullName>Agent(Général) d&apos;Assurance</fullName>
            </value>
            <value>
                <fullName>Divers Etranger</fullName>
            </value>
            <value>
                <fullName>Direction Générale</fullName>
            </value>
            <value>
                <fullName>Administrateur</fullName>
            </value>
            <value>
                <fullName>Président(e)</fullName>
            </value>
            <value>
                <fullName>Vice-Président</fullName>
            </value>
            <value>
                <fullName>Conseiller du Président</fullName>
            </value>
            <value>
                <fullName>Président du Directoire</fullName>
            </value>
            <value>
                <fullName>Président Directeur Général</fullName>
            </value>
            <value>
                <fullName>Directeur Général</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>