force-app/main/default/objects/Postes_Suppl_mentaires__c/fields/ID_FEG__c.field-meta.xml
<CustomField>
    <fullName>ID_FEG__c</fullName>
    <externalId>true</externalId>
    <label>ID FEG</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>