force-app/main/default/objects/Postes_Suppl_mentaires__c/fields/Mobile_professionnel__c.field-meta.xml
<CustomField>
    <fullName>Mobile_professionnel__c</fullName>
    <label>Mobile professionnel</label>
    <type>Phone</type>
</CustomField>