force-app/main/default/objects/Postes_Suppl_mentaires__c/fields/Parti_de_l_entreprise__c.field-meta.xml
<CustomField>
    <fullName>Parti_de_l_entreprise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parti de l&apos;entreprise</label>
    <type>Checkbox</type>
</CustomField>