force-app/main/default/objects/Postes_Suppl_mentaires__c/fields/R_mun_ration_annuelle_actuelle_en_K__c.field-meta.xml
<CustomField>
    <fullName>R_mun_ration_annuelle_actuelle_en_K__c</fullName>
    <label>Rémunération annuelle actuelle en K€</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>