force-app/main/default/objects/Postes_Suppl_mentaires__c/fields/T_l_phone_direct__c.field-meta.xml
<CustomField>
    <fullName>T_l_phone_direct__c</fullName>
    <label>Téléphone direct</label>
    <type>Phone</type>
</CustomField>