force-app/main/default/objects/Postes_Suppl_mentaires__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Compte__c</columns>
    <columns>Fonction__c</columns>
    <columns>Fonctions__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>